# telegram-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/telegram_mcp/: __init__.py  client.py  server.py
tests/: __init__.py  conftest.py  test_client.py  test_server.py
