[project]
name = "telegram-mcp"
version = "0.1.0"
description = "MCP server for Telegram user account - send and receive messages via MTProto"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Matheus Couto", email = "matheusccouto@gmail.com" }]
keywords = ["telegram", "mcp", "mtproto", "fastmcp", "hydrogram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "fastmcp>=2.0.0",
    "hydrogram>=0.2.0",
    "tgcrypto>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.9.0"]

[project.scripts]
telegram-mcp = "telegram_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_mcp"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ARG001", "ANN001", "ANN201"]

[tool.ruff.lint.isort]
known-first-party = ["telegram_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]